<resources>
    <string name="app_name">耍安卓</string>
    <string name="index">首页</string>
    <string name="Gank">Gank</string>
    <string name="category">分类</string>
    <string name="resource">资源</string>
    <string name="user_center">我的</string>
    <string name="new_label">新</string>
    <string name="click_load_complete">点击加载更多</string>
    <string name="search">搜索</string>
    <string name="hint_search">用空格隔开多个关键词</string>
    <string name="hot_search_word">搜索热词</string>
    <string name="history_search">历史搜索</string>
    <string name="top_article">置顶文章</string>
    <string name="please_input_search_key">请输入搜索关键字哦～</string>
    <string name="load_end">我也是有底线哒～</string>
    <string name="login">登陆</string>
</resources>
