<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:paddingLeft="@dimen/dp_16"
    android:paddingTop="@dimen/dp_16"
    android:paddingRight="@dimen/dp_16"
    android:paddingBottom="@dimen/dp_8">

    <TextView
        android:id="@+id/tv_search_hot_word"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:drawableStart="@drawable/hot_word_svg_icon"
        android:drawablePadding="@dimen/dp_12"
        android:text="@string/hot_search_word"
        android:textColor="@color/color_333333"
        android:textSize="@dimen/sp_14"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <org.lym.wanandroid_kotlin.weight.FloatLayout
        android:id="@+id/fl_hot_word"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dp_8"
        android:maxLines="3"
        app:childHorizontalSpacing="@dimen/dp_16"
        app:childVerticalSpacing="@dimen/dp_12"
        app:layout_constraintTop_toBottomOf="@id/tv_search_hot_word" />

    <TextView
        android:id="@+id/tv_history_search"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dp_16"
        android:drawableStart="@drawable/history_word_svg_icon"
        android:drawablePadding="@dimen/dp_12"
        android:text="@string/history_search"
        android:textColor="@color/color_333333"
        android:textSize="@dimen/sp_14"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@id/fl_hot_word" />

    <ImageView
        android:id="@+id/iv_clear_history"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/clear_history_svg_icon"
        app:layout_constraintBottom_toBottomOf="@id/tv_history_search"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="@id/tv_history_search" />

    <org.lym.wanandroid_kotlin.weight.FloatLayout
        android:id="@+id/fl_history"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dp_8"
        android:maxLines="3"
        app:childHorizontalSpacing="@dimen/dp_16"
        app:childVerticalSpacing="@dimen/dp_12"
        app:layout_constraintTop_toBottomOf="@id/tv_history_search" />

    <TextView
        android:id="@+id/tv_top_article"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dp_20"
        android:text="@string/top_article"
        android:textColor="@color/color_333333"
        android:textSize="@dimen/sp_16"
        android:textStyle="bold"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@id/fl_history" />

</androidx.constraintlayout.widget.ConstraintLayout>